green/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: food-frontend-service
  namespace: green

spec:
  selector:
    app: food-frontend

  ports:
    - protocol: TCP

      port: 80

      targetPort: 80

  type: ClusterIP
